--- a/index.html
+++ b/index.html
@@ -2,18 +2,69 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>WEB1 - WEB</title>
+    <title>WEB - Welcome</title>
+    <style>
+    body{
+      margin: 0;
+    }
+      a{
+        color:black;
+        text-decoration: none
+      }
+      h1{
+        font-size: 45px;
+        text-align: center;
+        border-bottom: 1px solid gray;
+        margin: 0;
+        padding:20px;
+      }
+      #grid{
+         display: grid;
+         grid-template-columns: 150px 1fr;
+      }
+      #grid ol{
+        padding-left: 33px;
+        border-right: 1px solid gray;
+        margin:0;
+        padding: 20px;
+        padding-left: 40px;
+      }
+      #grid #article{
+        padding-left: 25px;
+      }
+      @media(max-width:800px) {
+        #grid{
+          display: block;
+        }
+        ol{
+          border-right:none;
+        }
+        h1{
+          border-bottom:none;
+        }
+      }
+    </style>
   </head>
   <body>
     <h1><a href="index.html">WEB</a></h1>
-    <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
-    </ol>
-    <h2>WEB</h2>
-    <p>
-The World Wide Web (WWW), commonly known as the Web, is an information system where documents and other web resources are identified by Uniform Resource Locators (URLs, such as https://example.com/), which may be interlinked by hypertext, and are accessible over the Internet.[1][2] The resources of the Web are transferred via the Hypertext Transfer Protocol (HTTP) and may be accessed by users by a software application called a web browser and are published by a software application called a web server. The World Wide Web is not synonymous with the Internet, which pre-existed the Web in some form by over two decades and upon whose technologies the Web is built.
-    </p>
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
+      </ol>
+      <div id="article">
+        <h2>Welcome</h2>
+          The World Wide Web (WWW), commonly known as the Web, is an information
+          system where documents and other web resources are identified by Uniform
+          Resource Locators (URLs), which may be interlinked by hypertext, and are
+          accessible over the Internet. The resources of the Web are transferred
+          via the Hypertext Transfer Protocol (HTTP) and may be accessed by users
+          by a software application called a web browser and are published by a
+          software application called a web server. The World Wide Web is not
+          synonymous with the Internet, which pre-existed the Web in some form by
+          over two decades and upon whose technologies the Web is built.
+      </div>
+    </div>
   </body>
 </html>
